# web-prime-search

./: .env.template  README.md  SKILL.md  launch.py  pyproject.toml
.ai-control/: CLAUDE.md  README.md  session.json
.ai-control/context/: git-snapshot.md
.ai-control/plans/: move-launch-to-root.md
.ai-control/tasks/: TASK-001.json  TASK-002.json  TASK-003.json  TASK-004.json  TASK-005.json  TASK-006.json  TASK-007.json  TASK-008.json
.ai-control/templates/: BUG-template.json  HANDOFF-template.md  TASK-template.json  session.json
.copilot/skills/multi-agent-orchestrator/: SKILL.md  prompts.md
.github/: copilot-instructions.md
.github/agents/: executor.agent.md  orchestrator.agent.md  planner.agent.md  tester.agent.md
.github/instructions/: handoff-and-test.instructions.md  task-isolation.instructions.md
docs/: workflow-guide.md
openclaw/: README.md  web-prime-search.mcp.json.example
openclaw/web-prime-search/: SKILL.md  launch.py
scripts/: diagnose_network.py
src/web_prime_search/: __init__.py  __main__.py  config.py  dispatcher.py  mcp_tool.py  models.py  proxy.py
src/web_prime_search/engines/: _cli.py  baidu.py  douyin.py  duckduckgo.py  google.py  google_html.py  x.py
tests/: conftest.py  test_config.py  test_dispatcher.py  test_engine_baidu.py  test_engine_cli.py  test_engine_douyin.py  test_engine_duckduckgo.py  test_engine_google.py  test_engine_google_html.py  test_engine_x.py  test_main.py  test_mcp_tool.py  test_openclaw_launch.py  test_proxy.py
