[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-prime-search"
version = "0.3.0"
description = "Multi-engine search tool for OpenClaw with priority routing through Clash proxy"
requires-python = ">=3.9"
dependencies = [
    "ddgs>=9.12.0",
    "httpx>=0.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mcp>=1.0",
    "playwright>=1.52.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.scripts]
web-prime-search = "web_prime_search.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/web_prime_search"]
